--- a/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
@@ -157,6 +157,8 @@
 								itemLabel="#{messages['prospect.potentiel.2']}" />
 							<f:selectItem itemValue="3"
 								itemLabel="#{messages['prospect.potentiel.3']}" />
+							<f:selectItem itemValue="4"
+								itemLabel="#{messages['prospect.potentiel.4']}" />
 						</h:selectOneMenu>
 					</s:decorate>
 					<s:decorate template="../../layout/display.xhtml">
