--- a/WebContent/mz/search/filterProspects.xhtml
+++ b/WebContent/mz/search/filterProspects.xhtml
@@ -92,6 +92,8 @@
 								itemLabel="#{messages['prospect.potentiel.2']}" />
 							<f:selectItem itemValue="3"
 								itemLabel="#{messages['prospect.potentiel.3']}" />
+							<f:selectItem itemValue="4"
+								itemLabel="#{messages['prospect.potentiel.4']}" />
 						</h:selectOneMenu>
 			</a:outputPanel>
 			
