--- a/WebContent/mz/prospect/panels/_editFormation.xhtml
+++ b/WebContent/mz/prospect/panels/_editFormation.xhtml
@@ -88,7 +88,7 @@
 								<h:outputText value="#{messages['prospect.nomParticipant']}" />
 							</ui:define>
 							<h:outputText
-								value="#{editProspectManager.prospect.prospectDetail.participants}" />
+								value="#{editProspectManager.prospect.prospectDetail.participantsAsString}" />
 						</s:decorate>
 					</a:outputPanel></td>
 				<td><a:outputPanel id="session">
