--- a/WebContent/mz/prospect/panels/_visuFormation.xhtml
+++ b/WebContent/mz/prospect/panels/_visuFormation.xhtml
@@ -74,7 +74,7 @@
 								<h:outputText value="#{messages['prospect.nomParticipant']}" />
 							</ui:define>
 							<h:outputText
-								value="#{editProspectManager.prospect.prospectDetail.participants}" />
+								value="#{editProspectManager.prospect.prospectDetail.participantsAsString}" />
 						</s:decorate>
 					</a:outputPanel></td>
 				<td><s:decorate template="../../layout/display.xhtml">
