Ajout du choix A distance dans contact client

--- a/WebContent/mz/prospect/prospect.xhtml
+++ b/WebContent/mz/prospect/prospect.xhtml
@@ -83,6 +83,7 @@
 							  						<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 							  						<f:selectItem itemValue="IDF" itemLabel="IDF" />
 							  						<f:selectItem itemValue="Province" itemLabel="Province" />
+							  						<f:selectItem itemValue="A distance" itemLabel="A distance" />
 												</h:selectOneMenu>
 									</s:decorate>
 							 	</td>
