--- a/WebContent/mz/prospect/editProspectClient.xhtml
+++ b/WebContent/mz/prospect/editProspectClient.xhtml
@@ -49,6 +49,7 @@
 								  						<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 								  						<f:selectItem itemValue="IDF" itemLabel="IDF" />
 								  						<f:selectItem itemValue="Province" itemLabel="Province" />
+								  						<f:selectItem itemValue="A distance" itemLabel="A distance" />
 													</h:selectOneMenu>
 										</s:decorate>
 								 	</td>
