--- a/WebContent/mz/prospect/panels/_editFiche.xhtml
+++ b/WebContent/mz/prospect/panels/_editFiche.xhtml
@@ -25,6 +25,7 @@
 							<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 							<f:selectItem itemValue="IDF" itemLabel="IDF" />
 							<f:selectItem itemValue="Province" itemLabel="Province" />
+							<f:selectItem itemValue="A distance" itemLabel="A distance" />
 						</h:selectOneMenu>
 					</s:decorate>
 
