--- a/WebContent/mz/search/filterProspects.xhtml
+++ b/WebContent/mz/search/filterProspects.xhtml
@@ -54,6 +54,7 @@
 					<f:selectItem itemValue="Non affecté" />
 					<f:selectItem itemValue="En attente" />
 					<f:selectItem itemValue="En cours" />
+					<f:selectItem itemValue="Doublon" />
 					<f:selectItem itemValue="Abandon" />
 					<f:selectItem itemValue="Gagné" />
 					<f:selectItem itemValue="Perdu" />
