Ajout du lieu A distance

--- a/WebContent/mz/Intra/createIntra.xhtml
+++ b/WebContent/mz/Intra/createIntra.xhtml
@@ -39,6 +39,7 @@
 										<f:selectItem itemValue="" itemLabel="-- Choisir --"/>
 									   	<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB"/>
 									   	<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
+									   	<f:selectItem itemValue="A distance" itemLabel="Distance" />
 									</h:selectOneMenu>
 								</s:decorate>
 							</td>
