--- a/WebContent/mz/Intra/editIntra.xhtml
+++ b/WebContent/mz/Intra/editIntra.xhtml
@@ -85,6 +85,7 @@
 										<a:ajax event="change" render="ville" />
 										<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 										<f:selectItem itemValue="Chez le client" itemLabel="Client" />
+										<f:selectItem itemValue="A distance" itemLabel="Distance" />
 									</h:selectOneMenu>
 								</s:decorate></td>
 							<td><s:decorate template="../layout/display.xhtml"
