Pas de valeur par défaut pour modalités

--- a/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
@@ -91,6 +91,7 @@
 							<h:selectOneMenu
 								value="#{editProspectManager.prospect.prospectDetail.modalite}"
 								style="width:160px; height:20px;">
+								<f:selectItem itemValue="" itemLabel="Non renseigné" />
 								<f:selectItem itemValue="false" itemLabel="Présentiel" />
 								<f:selectItem itemValue="true" itemLabel="A distance" />
 							</h:selectOneMenu>
