--- a/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
@@ -62,14 +62,13 @@
 						</ui:define>
 						<h:outputText
 							value="Non renseigné"
-							rendered="#{editProspectManager.prospect.prospectDetail.modalite == null}" />
-						
+							rendered="#{editProspectManager.prospect.prospectDetail.modalite == null}" />					
 						<h:outputText
 							value="Présentiel"
-							rendered="#{!editProspectManager.prospect.prospectDetail.modalite}" />
+							rendered="#{editProspectManager.prospect.prospectDetail.modalite == 0}" />
 						<h:outputText
 							value="A distance"
-							rendered="#{editProspectManager.prospect.prospectDetail.modalite}" />
+							rendered="#{editProspectManager.prospect.prospectDetail.modalite == 1}" />
 					</s:decorate>
 				</fieldset>
 			</td>
