--- a/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_visuStatutProspect.xhtml
@@ -65,7 +65,7 @@
 							rendered="#{editProspectManager.prospect.prospectDetail.modalite == null}" />					
 						<h:outputText
 							value="Présentiel"
-							rendered="#{editProspectManager.prospect.prospectDetail.modalite != null and !editProspectManager.prospect.prospectDetail.modalite == 0}" />
+							rendered="#{editProspectManager.prospect.prospectDetail.modalite != null and !editProspectManager.prospect.prospectDetail.modalite}" />
 						<h:outputText
 							value="A distance"
 							rendered="#{editProspectManager.prospect.prospectDetail.modalite}" />
