Lieu : Ne sait pas

--- a/WebContent/mz/prospect/createDemandeClient.xhtml
+++ b/WebContent/mz/prospect/createDemandeClient.xhtml
@@ -46,6 +46,7 @@
 											<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 											<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
 											<f:selectItem itemValue="A distance" itemLabel="Distance" />
+											<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
 										</h:selectOneMenu>
 									</s:decorate>
 								</h:panelGrid>
