--- a/WebContent/mz/prospect/editProspectClient.xhtml
+++ b/WebContent/mz/prospect/editProspectClient.xhtml
@@ -82,6 +82,7 @@
 										<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 										<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
 										<f:selectItem itemValue="A distance" itemLabel="Distance" />
+										<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
 									</h:selectOneMenu>
 								</s:decorate></td>
 						</tr>
@@ -470,6 +471,7 @@
 											<a:ajax event="change" render="" />
 											<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 											<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
+											<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
 										</h:selectOneMenu>
 									</s:decorate></td>
 								<td><s:decorate template="../layout/display.xhtml"
