--- a/WebContent/mz/prospect/panels/_editIntra.xhtml
+++ b/WebContent/mz/prospect/panels/_editIntra.xhtml
@@ -114,6 +114,7 @@
 								<a:ajax event="change" render="" />
 								<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 								<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
+								<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />						
 							</h:selectOneMenu>
 						</s:decorate></td>
 					<td><s:decorate template="../../layout/display.xhtml"
