--- a/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
+++ b/WebContent/mz/prospect/panels/_editStatutProspect.xhtml
@@ -68,6 +68,7 @@
 								<f:selectItem itemValue="" itemLabel="A définir" />
 								<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 								<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
+								<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
 							</h:selectOneMenu>
 						</s:decorate>
 					</a:outputPanel>
