--- a/WebContent/mz/prospect/panels/_editFormation.xhtml
+++ b/WebContent/mz/prospect/panels/_editFormation.xhtml
@@ -27,6 +27,7 @@
 							<f:selectItem itemValue="" itemLabel="-- Choisir --" />
 							<f:selectItem itemValue="Chez PLB Consultant" itemLabel="PLB" />
 							<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
+							<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
 						</h:selectOneMenu>
 					</s:decorate>
 				</a:outputPanel>
