--- a/WebContent/mz/prospect/prospect.xhtml
+++ b/WebContent/mz/prospect/prospect.xhtml
@@ -178,6 +178,8 @@
 													itemLabel="PLB" />
 												<f:selectItem itemValue="En vos locaux" itemLabel="Client" />
 												<f:selectItem itemValue="A distance" itemLabel="Distance" />
+												<f:selectItem itemValue="Ne sait pas" itemLabel="Ne sait pas" />
+
 											</h:selectOneMenu>
 										</s:decorate>
 									</h:panelGrid>
