--- a/WebContent/mz/prospect/editProspectClient.xhtml
+++ b/WebContent/mz/prospect/editProspectClient.xhtml
@@ -693,12 +693,15 @@
 									<td><s:decorate template="../layout/display.xhtml"
 											style="width:500px;">
 											<ui:define name="label">
-												<h:outputText value="Frais ?" />
+												<h:outputText value="Quel Format ?" />
 											</ui:define>
 											<h:selectOneMenu
-												value="#{searchProspect.prospect.informationIntra.frais}">
-												<f:selectItem itemValue="1" itemLabel="OUI" />
-												<f:selectItem itemValue="0" itemLabel="NON" />
+												value="#{editProspectManager.prospect.informationIntra.format}">
+												<f:selectItem itemValue="" itemLabel="--- A préciser ---" />
+												<f:selectItem itemValue="Intra Std" itemLabel="Intra Std" />
+												<f:selectItem itemValue="Sur mesure" itemLabel="Sur mesure" />
+												<f:selectItem itemValue="Ne sait pas"
+													itemLabel="Ne sait pas" />
 											</h:selectOneMenu>
 										</s:decorate></td>
 									<td><s:decorate template="../layout/display.xhtml"
